--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -38,6 +38,10 @@ a {
     margin: auto;
 }
 
+.height-75 {
+    height: 75%;
+}
+
 img {
     max-width: 100% !important;
 }
@@ -70,3 +74,5 @@ img {
 @import './components/modal';
 @import './components/loading';
 @import './components/not-found';
+@import './components/settings';
+@import './components/footer';
